[gd_scene load_steps=7 format=3 uid="uid://ch7fncmv84m5"]

[ext_resource type="ArrayMesh" uid="uid://c2yxi4osv4evl" path="res://assets/meshs/pyramid.obj" id="1_fwaa8"]
[ext_resource type="Script" path="res://scripts/turret_aim.gd" id="2_4d11o"]
[ext_resource type="ArrayMesh" uid="uid://dks21xsjpssjm" path="res://assets/meshs/four_sided_pointer.obj" id="2_e5brm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gujqc"]
albedo_color = Color(1, 1, 0.858824, 1)
metallic = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pibn5"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qg8kp"]
height = 4.0
radius = 5.0

[node name="basic_tower" type="Node3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("2_4d11o")

[node name="base" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1.1, 1)
mesh = ExtResource("1_fwaa8")
surface_material_override/0 = SubResource("StandardMaterial3D_gujqc")

[node name="rotator" type="Node3D" parent="base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="turret" type="MeshInstance3D" parent="base/rotator"]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 0, -0.2, 0)
mesh = ExtResource("2_e5brm")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_pibn5")

[node name="attack_area" type="Area3D" parent="base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="attack_radius_zone" type="CollisionShape3D" parent="base/attack_area"]
shape = SubResource("CylinderShape3D_qg8kp")

[node name="bullet_locus" type="Node3D" parent="base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[connection signal="area_entered" from="base/attack_area" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="base/attack_area" to="." method="_on_attack_area_area_exited"]
